--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.6.2'
     compile 'com.firebaseui:firebase-ui-database:3.1.0'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     // testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
