--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         </activity>
         <activity android:name=".PostActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".SinglePostActivity"></activity>
+        <activity android:name=".SinglePostActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
